pkg/machine/script/.antlr/NumScriptParser.java
// Generated from /home/phlimy/Projects/Contrib/stack/components/ledger/pkg/machine/script/NumScript.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NumScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, NEWLINE=7, WHITESPACE=8, 
		MULTILINE_COMMENT=9, LINE_COMMENT=10, VARS=11, META=12, SET_TX_META=13, 
		SET_ACCOUNT_META=14, PRINT=15, FAIL=16, SEND=17, SOURCE=18, FROM=19, MAX=20, 
		DESTINATION=21, TO=22, ALLOCATE=23, OP_ADD=24, OP_SUB=25, OP_EQ=26, OP_NEQ=27, 
		OP_LT=28, OP_LTE=29, OP_GT=30, OP_GTE=31, OP_NOT=32, OP_AND=33, OP_OR=34, 
		LPAREN=35, RPAREN=36, LBRACK=37, RBRACK=38, LBRACE=39, RBRACE=40, EQ=41, 
		TY_ACCOUNT=42, TY_ASSET=43, TY_NUMBER=44, TY_MONETARY=45, TY_PORTION=46, 
		TY_STRING=47, TY_BOOL=48, STRING=49, PORTION=50, REMAINING=51, KEPT=52, 
		BALANCE=53, SAVE=54, NUMBER=55, PERCENT=56, VARIABLE_NAME=57, ACCOUNT=58, 
		ASSET=59;
	public static final int
		RULE_monetary = 0, RULE_monetaryAll = 1, RULE_literal = 2, RULE_variable = 3, 
		RULE_expression = 4, RULE_allotmentPortion = 5, RULE_destinationInOrder = 6, 
		RULE_destinationAllotment = 7, RULE_keptOrDestination = 8, RULE_destination = 9, 
		RULE_sourceAccountOverdraft = 10, RULE_sourceAccount = 11, RULE_sourceInOrder = 12, 
		RULE_sourceMaxed = 13, RULE_source = 14, RULE_sourceAllotment = 15, RULE_valueAwareSource = 16, 
		RULE_statement = 17, RULE_type_ = 18, RULE_origin = 19, RULE_varDecl = 20, 
		RULE_varListDecl = 21, RULE_script = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"monetary", "monetaryAll", "literal", "variable", "expression", "allotmentPortion", 
			"destinationInOrder", "destinationAllotment", "keptOrDestination", "destination", 
			"sourceAccountOverdraft", "sourceAccount", "sourceInOrder", "sourceMaxed", 
			"source", "sourceAllotment", "valueAwareSource", "statement", "type_", 
			"origin", "varDecl", "varListDecl", "script"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'*'", "'?'", "':'", "'allowing overdraft up to'", "'allowing unbounded overdraft'", 
			"','", null, null, null, null, "'vars'", "'meta'", "'set_tx_meta'", "'set_account_meta'", 
			"'print'", "'fail'", "'send'", "'source'", "'from'", "'max'", "'destination'", 
			"'to'", "'allocate'", "'+'", "'-'", "'=='", "'!='", "'<'", "'<='", "'>'", 
			"'>='", "'!'", "'&&'", "'||'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"'='", "'account'", "'asset'", "'number'", "'monetary'", "'portion'", 
			"'string'", "'bool'", null, null, "'remaining'", "'kept'", "'balance'", 
			"'save'", null, "'%'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "NEWLINE", "WHITESPACE", "MULTILINE_COMMENT", 
			"LINE_COMMENT", "VARS", "META", "SET_TX_META", "SET_ACCOUNT_META", "PRINT", 
			"FAIL", "SEND", "SOURCE", "FROM", "MAX", "DESTINATION", "TO", "ALLOCATE", 
			"OP_ADD", "OP_SUB", "OP_EQ", "OP_NEQ", "OP_LT", "OP_LTE", "OP_GT", "OP_GTE", 
			"OP_NOT", "OP_AND", "OP_OR", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
			"LBRACE", "RBRACE", "EQ", "TY_ACCOUNT", "TY_ASSET", "TY_NUMBER", "TY_MONETARY", 
			"TY_PORTION", "TY_STRING", "TY_BOOL", "STRING", "PORTION", "REMAINING", 
			"KEPT", "BALANCE", "SAVE", "NUMBER", "PERCENT", "VARIABLE_NAME", "ACCOUNT", 
			"ASSET"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NumScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NumScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MonetaryContext extends ParserRuleContext {
		public ExpressionContext asset;
		public ExpressionContext amt;
		public TerminalNode LBRACK() { return getToken(NumScriptParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(NumScriptParser.RBRACK, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public MonetaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_monetary; }
	}

	public final MonetaryContext monetary() throws RecognitionException {
		MonetaryContext _localctx = new MonetaryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_monetary);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(LBRACK);
			setState(47);
			((MonetaryContext)_localctx).asset = expression(0);
			setState(48);
			((MonetaryContext)_localctx).amt = expression(0);
			setState(49);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MonetaryAllContext extends ParserRuleContext {
		public ExpressionContext asset;
		public TerminalNode LBRACK() { return getToken(NumScriptParser.LBRACK, 0); }
		public TerminalNode RBRACK() { return getToken(NumScriptParser.RBRACK, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public MonetaryAllContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_monetaryAll; }
	}

	public final MonetaryAllContext monetaryAll() throws RecognitionException {
		MonetaryAllContext _localctx = new MonetaryAllContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_monetaryAll);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(LBRACK);
			setState(52);
			((MonetaryAllContext)_localctx).asset = expression(0);
			setState(53);
			match(T__0);
			setState(54);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
	 
		public LiteralContext() { }
		public void copyFrom(LiteralContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LitPortionContext extends LiteralContext {
		public TerminalNode PORTION() { return getToken(NumScriptParser.PORTION, 0); }
		public LitPortionContext(LiteralContext ctx) { copyFrom(ctx); }
	}
	public static class LitStringContext extends LiteralContext {
		public TerminalNode STRING() { return getToken(NumScriptParser.STRING, 0); }
		public LitStringContext(LiteralContext ctx) { copyFrom(ctx); }
	}
	public static class LitAccountContext extends LiteralContext {
		public TerminalNode ACCOUNT() { return getToken(NumScriptParser.ACCOUNT, 0); }
		public LitAccountContext(LiteralContext ctx) { copyFrom(ctx); }
	}
	public static class LitAssetContext extends LiteralContext {
		public TerminalNode ASSET() { return getToken(NumScriptParser.ASSET, 0); }
		public LitAssetContext(LiteralContext ctx) { copyFrom(ctx); }
	}
	public static class LitNumberContext extends LiteralContext {
		public TerminalNode NUMBER() { return getToken(NumScriptParser.NUMBER, 0); }
		public LitNumberContext(LiteralContext ctx) { copyFrom(ctx); }
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_literal);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ACCOUNT:
				_localctx = new LitAccountContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				match(ACCOUNT);
				}
				break;
			case ASSET:
				_localctx = new LitAssetContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				match(ASSET);
				}
				break;
			case NUMBER:
				_localctx = new LitNumberContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				match(NUMBER);
				}
				break;
			case STRING:
				_localctx = new LitStringContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				match(STRING);
				}
				break;
			case PORTION:
				_localctx = new LitPortionContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				match(PORTION);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode VARIABLE_NAME() { return getToken(NumScriptParser.VARIABLE_NAME, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(VARIABLE_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExprAddSubContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode OP_ADD() { return getToken(NumScriptParser.OP_ADD, 0); }
		public TerminalNode OP_SUB() { return getToken(NumScriptParser.OP_SUB, 0); }
		public ExprAddSubContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ExprTernaryContext extends ExpressionContext {
		public ExpressionContext cond;
		public ExpressionContext ifTrue;
		public ExpressionContext ifFalse;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ExprTernaryContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ExprLogicalNotContext extends ExpressionContext {
		public ExpressionContext lhs;
		public TerminalNode OP_NOT() { return getToken(NumScriptParser.OP_NOT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExprLogicalNotContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ExprArithmeticConditionContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode OP_EQ() { return getToken(NumScriptParser.OP_EQ, 0); }
		public TerminalNode OP_NEQ() { return getToken(NumScriptParser.OP_NEQ, 0); }
		public TerminalNode OP_LT() { return getToken(NumScriptParser.OP_LT, 0); }
		public TerminalNode OP_LTE() { return getToken(NumScriptParser.OP_LTE, 0); }
		public TerminalNode OP_GT() { return getToken(NumScriptParser.OP_GT, 0); }
		public TerminalNode OP_GTE() { return getToken(NumScriptParser.OP_GTE, 0); }
		public ExprArithmeticConditionContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ExprLiteralContext extends ExpressionContext {
		public LiteralContext lit;
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ExprLiteralContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ExprLogicalOrContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode OP_OR() { return getToken(NumScriptParser.OP_OR, 0); }
		public ExprLogicalOrContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ExprVariableContext extends ExpressionContext {
		public VariableContext var_;
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExprVariableContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ExprMonetaryNewContext extends ExpressionContext {
		public MonetaryContext mon;
		public MonetaryContext monetary() {
			return getRuleContext(MonetaryContext.class,0);
		}
		public ExprMonetaryNewContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ExprEnclosedContext extends ExpressionContext {
		public ExpressionContext expr;
		public TerminalNode LPAREN() { return getToken(NumScriptParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(NumScriptParser.RPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExprEnclosedContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ExprLogicalAndContext extends ExpressionContext {
		public ExpressionContext lhs;
		public Token op;
		public ExpressionContext rhs;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode OP_AND() { return getToken(NumScriptParser.OP_AND, 0); }
		public ExprLogicalAndContext(ExpressionContext ctx) { copyFrom(ctx); }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OP_NOT:
				{
				_localctx = new ExprLogicalNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(66);
				match(OP_NOT);
				setState(67);
				((ExprLogicalNotContext)_localctx).lhs = expression(8);
				}
				break;
			case STRING:
			case PORTION:
			case NUMBER:
			case ACCOUNT:
			case ASSET:
				{
				_localctx = new ExprLiteralContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(68);
				((ExprLiteralContext)_localctx).lit = literal();
				}
				break;
			case VARIABLE_NAME:
				{
				_localctx = new ExprVariableContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(69);
				((ExprVariableContext)_localctx).var_ = variable();
				}
				break;
			case LBRACK:
				{
				_localctx = new ExprMonetaryNewContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(70);
				((ExprMonetaryNewContext)_localctx).mon = monetary();
				}
				break;
			case LPAREN:
				{
				_localctx = new ExprEnclosedContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(71);
				match(LPAREN);
				setState(72);
				((ExprEnclosedContext)_localctx).expr = expression(0);
				setState(73);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(95);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new ExprAddSubContext(new ExpressionContext(_parentctx, _parentState));
						((ExprAddSubContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(77);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(78);
						((ExprAddSubContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==OP_ADD || _la==OP_SUB) ) {
							((ExprAddSubContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(79);
						((ExprAddSubContext)_localctx).rhs = expression(11);
						}
						break;
					case 2:
						{
						_localctx = new ExprArithmeticConditionContext(new ExpressionContext(_parentctx, _parentState));
						((ExprArithmeticConditionContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(80);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(81);
						((ExprArithmeticConditionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OP_EQ) | (1L << OP_NEQ) | (1L << OP_LT) | (1L << OP_LTE) | (1L << OP_GT) | (1L << OP_GTE))) != 0)) ) {
							((ExprArithmeticConditionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(82);
						((ExprArithmeticConditionContext)_localctx).rhs = expression(10);
						}
						break;
					case 3:
						{
						_localctx = new ExprLogicalAndContext(new ExpressionContext(_parentctx, _parentState));
						((ExprLogicalAndContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(83);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(84);
						((ExprLogicalAndContext)_localctx).op = match(OP_AND);
						setState(85);
						((ExprLogicalAndContext)_localctx).rhs = expression(8);
						}
						break;
					case 4:
						{
						_localctx = new ExprLogicalOrContext(new ExpressionContext(_parentctx, _parentState));
						((ExprLogicalOrContext)_localctx).lhs = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(86);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(87);
						((ExprLogicalOrContext)_localctx).op = match(OP_OR);
						setState(88);
						((ExprLogicalOrContext)_localctx).rhs = expression(7);
						}
						break;
					case 5:
						{
						_localctx = new ExprTernaryContext(new ExpressionContext(_parentctx, _parentState));
						((ExprTernaryContext)_localctx).cond = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(89);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(90);
						match(T__1);
						setState(91);
						((ExprTernaryContext)_localctx).ifTrue = expression(0);
						setState(92);
						match(T__2);
						setState(93);
						((ExprTernaryContext)_localctx).ifFalse = expression(3);
						}
						break;
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AllotmentPortionContext extends ParserRuleContext {
		public AllotmentPortionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allotmentPortion; }
	 
		public AllotmentPortionContext() { }
		public void copyFrom(AllotmentPortionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AllotmentPortionRemainingContext extends AllotmentPortionContext {
		public TerminalNode REMAINING() { return getToken(NumScriptParser.REMAINING, 0); }
		public AllotmentPortionRemainingContext(AllotmentPortionContext ctx) { copyFrom(ctx); }
	}
	public static class AllotmentPortionVarContext extends AllotmentPortionContext {
		public VariableContext por;
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public AllotmentPortionVarContext(AllotmentPortionContext ctx) { copyFrom(ctx); }
	}
	public static class AllotmentPortionConstContext extends AllotmentPortionContext {
		public TerminalNode PORTION() { return getToken(NumScriptParser.PORTION, 0); }
		public AllotmentPortionConstContext(AllotmentPortionContext ctx) { copyFrom(ctx); }
	}

	public final AllotmentPortionContext allotmentPortion() throws RecognitionException {
		AllotmentPortionContext _localctx = new AllotmentPortionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_allotmentPortion);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PORTION:
				_localctx = new AllotmentPortionConstContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(PORTION);
				}
				break;
			case VARIABLE_NAME:
				_localctx = new AllotmentPortionVarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				((AllotmentPortionVarContext)_localctx).por = variable();
				}
				break;
			case REMAINING:
				_localctx = new AllotmentPortionRemainingContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(102);
				match(REMAINING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
